--- a/boundary-segmentation.html
+++ b/boundary-segmentation.html
@@ -48,30 +48,12 @@
               <canvas id="output" width=352 height=264 style="max-width: 100%"></canvas>
           </td>
           <td>
-              <input type="radio" name="body" value="0" checked="checked"> Left Face<br>
-              <input type="radio" name="body" value="1"> Right Face<br>
-              <input type="radio" name="body" value="2"> Right Upper Leg Front<br>
-              <input type="radio" name="body" value="3"> Right Lower Leg Back<br>
-              <input type="radio" name="body" value="4"> Right Upper Leg Back<br>
-              <input type="radio" name="body" value="5"> Left Lower Leg Front<br>
-              <input type="radio" name="body" value="6"> Left Upper Leg Front<br>
-              <input type="radio" name="body" value="7"> Left Upper Leg Back<br>
-              <input type="radio" name="body" value="8"> Left Lower Leg Back<br>
-              <input type="radio" name="body" value="9"> Right Feet<br>
-              <input type="radio" name="body" value="10"> Right Lower Leg Front<br>
-              <input type="radio" name="body" value="11"> Left Feet<br>
-              <input type="radio" name="body" value="12"> Torso Front<br>
-              <input type="radio" name="body" value="13"> Torso Back<br>
-              <input type="radio" name="body" value="14"> Right Upper Arm Front<br>
-              <input type="radio" name="body" value="15"> Right Upper Arm Back<br>
-              <input type="radio" name="body" value="16"> Right Lower Arm Back<br>
-              <input type="radio" name="body" value="17"> Left Lower Arm Front<br>
-              <input type="radio" name="body" value="18"> Left Upper Arm Front<br>
-              <input type="radio" name="body" value="19"> Left Upper Arm Back<br>
-              <input type="radio" name="body" value="20"> Left Lower Arm Back<br>
-              <input type="radio" name="body" value="21"> Right Hand<br>
-              <input type="radio" name="body" value="22"> Right Lower Arm Front<br>
-              <input type="radio" name="body" value="23"> Left Hand
+              <input type="radio" name="body" value="head" checked="checked"> Head<br>
+              <input type="radio" name="body" value="rightArm"> Right Arm<br>
+              <input type="radio" name="body" value="rightLeg"> Right Leg<br>
+              <input type="radio" name="body" value="body"> Body<br>
+              <input type="radio" name="body" value="leftArm"> Left Arm<br>
+              <input type="radio" name="body" value="leftLeg"> Left Leg<br>
           </td>
       </tr>
       <tr>
